* 读写支持`不使用 try-with-resources`语法糖